# ai-knowledge-base

./: .env.example  .gitignore  AGENTS.md  cost_comparison.md  mcp_knowledge_server.py  pyproject.toml  requirements.txt  sub-agent-test-log.md
.github/workflows/: daily-collect.yml
.opencode/agents/: analyzer.md  analyzer_agent.json  collector.md  crawler_agent.json  organizer.md  organizer_agent.json
.opencode/plugins/: quality-hooks.ts
.opencode/skills/: data_deduplication.json  nlp_processing.json  web_crawling.json
hooks/: check_quality.py  validate_json.py
knowledge/: articles_index.json
knowledge/articles/: 2026-04-21-github_trending-ai-hedge-fund.json  2026-04-21-github_trending-andrej-karpathy-skills.json  2026-04-21-github_trending-claude-mem.json  2026-04-21-github_trending-dive-into-llms.json  2026-04-21-github_trending-evolver.json  2026-04-21-github_trending-genericagent.json  2026-04-21-github_trending-hermes-agent.json  2026-04-21-github_trending-multica.json  2026-04-21-github_trending-omi.json  2026-04-21-github_trending-voicebox.json  2026-04-23-github_trending-claude-context.json  2026-04-23-github_trending-langfuse.json  2026-04-23-github_trending-pixelle-video.json  (+603 more)
pipeline/: __init__.py  model_client.py  pipeline.py  rss_sources.yaml
tests/: test_pipeline_github_trending.py  test_planner.py  test_workflow_graph.py  test_workflow_nodes.py
workflows/: analyze.py  collect.py  graph.py  human_flag.py  model_client.py  node_constants.py  node_support.py  nodes.py  organize.py  planner.py  reviewer.py  reviser.py  save.py  state.py
(+85 files in other folders)
